--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,8 +1,8 @@
 - date: 25 February 2020
-  headline: "New paper on sleeper species.  <a href='https://www.mdpi.com/2075-4450/11/3/142'>See Frank and Just. Insects (2020)</a>!"
-
+  headline: "New paper on sleeper species. <a href='https://www.mdpi.com/2075-4450/11/3/142'>See Frank and Just. Insects (2020)</a>!"
+  
 - date: 17 February 2020
-  headline: "I'll be at the CyVerse FOSS workshop all week <a href='https://cyverse.org/foss'>Foundation Open Science Skills</a>!"
+  headline: "I am at the CyVerse FOSS workshop all week. <a href='https://cyverse.org/foss'>Foundation Open Science Skills</a>!"
 
-  - date: 6 January 2020
-  headline: "Gloomy scale thermal tolerance paper <a href='https://doi.org/10.1093/ee/nvz154'>See Just and Frank. Envtl. Ent. (2020)</a>!"
+- date: 6 January 2020
+  headline: "Gloomy scale thermal tolerance paper. <a href='https://doi.org/10.1093/ee/nvz154'>See Just and Frank. Envtl. Ent. (2020)</a>!"
