updated to just lab content

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,7 +1,7 @@
 - title: "Can cities activate sleeper species and predict future forest pests? A case study of scale insects"
   image:
   description: 
-  authors: SD Frank and MG Just
+  authors: SD Frank, MG Just
   link:
     url: https://www.mdpi.com/2075-4450/11/3/142
     display:  Insects. 2020. 11(3), 142.
@@ -11,7 +11,7 @@
 - title: "Thermal tolerance of gloomy scale in the eastern USA"
   image: STS_news.png
   description: 
-  authors: MG Just and SD Frank
+  authors: MG Just, SD Frank
   link:
     url: https://doi.org/10.1093/ee/nvz154
     display:  Environmental Entomology. 2020. 49(1), 104-114.
