updated doi for insects

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -3,7 +3,7 @@
   description: 
   authors: SD Frank, MG Just
   link:
-    url: https://www.mdpi.com/2075-4450/11/3/142
+    url: https://doi.org/10.3390/insects11030142
     display:  Insects. 2020. 11(3), 142.
   highlight: 1
   news2:
