added fire trap pub

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -6,3 +6,6 @@
 
 - date: 6 January 2020
   headline: "Gloomy scale thermal tolerance paper. <a href='https://doi.org/10.1093/ee/nvz154'>See Just and Frank. Envtl. Ent. (2020)</a>!"
+
+- date: 2 January 2020
+  headline: "Better lucky than good!. How savanna trees escpae the fire trap. <a href='https://doi.org/10.1002/ecy.2895'>See Hoffmann et al. Ecology (2020)</a>!"
