added tree band pub

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -9,3 +9,6 @@
 
 - date: 2 January 2020
   headline: "Better lucky than good!. How savanna trees escpae the fire trap. <a href='https://doi.org/10.1002/ecy.2895'>See Hoffmann et al. Ecology (2020)</a>!"
+
+- date: 8 May 2019
+  headline: "Testing out inexpensive dendrometers that we use with the <a href= 'https://ecoipm.org/a-trees-life'> A Tree's Life</a> citizen-science project. <a href='https://doi.org/10.1093/jofore/fvz026'>See Just and Frank. J. Forestry. (2019)</a>!"
