fixed names in long list for ag pub

--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -61,8 +61,7 @@
 - title: "The role of citizen science in addressing grand challenges in food and agriculture research"
   image: ag.png
   description: 
-  authors: Ryan, S. F., N. L. Adamson, A. Aktipis, L. K. Andersen, R. Austin, L. Barnes, M. R. Beasley, K. D. 
-  Bedell, S. Briggs, B. Chapman, C. B. Cooper, J. O. Corn, N. G. Creamer, J. A. Delborne, P. Domenico, E. Driscoll, J. Goodwin, A. Hjarding, J. M. Hulbert, S. Isard, Just, M.G., K. Kar Gupta, M. M. López-Uribe, J. O’Sullivan, E. A. Landis, A. A. Madden, E. A. McKenney, L. M. Nichols, B. J. Reading, S. Russell, N. Sengupta, L. R. Shapiro, L. K. Shell, J. K. Sheard, D. D. Shoemaker, D. M. Sorger, C. Starling, S. Thakur, R. R. Vatsavai, M. Weinstein, P. Winfrey, and R. R. Dunn
+  authors: SF Ryan, NL Adamson, A Aktipis, LK Andersen, R Austin, L Barnes, MR Beasley, KD Bedell, S Briggs, B Chapman, CB Cooper, JO Corn, NG Creamer, JA Delborne, P Domenico, E Driscoll, J Goodwin, A Hjarding, JM Hulbert, S Isard, MG Just, K Kar Gupta, MM López-Uribe, J O’Sullivan, EA Landis, AA Madden, EA McKenney, LM Nichols, BJ Reading, S Russell, N Sengupta, LR Shapiro, LK Shell, JK Sheard, DD Shoemaker, DM Sorger, C Starling, S Thakur, RR Vatsavai, M Weinstein, P Winfrey, RR Dunn
   link:
     url: https://doi.org/10.1098/rspb.2018.1977
     display:  Proceedings of the royal society B. 2018. 285, 20181977.
