--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 25 December 2020
+  headline: "New paper on everything you wanted to know about gloomy scales. <a href='https://doi.org/10.1093/jipm/pmaa028'>See Just et al. Journal of IPM (2020)</a>!"
+
 - date: 25 February 2020
   headline: "New paper on sleeper species. <a href='https://www.mdpi.com/2075-4450/11/3/142'>See Frank and Just. Insects (2020)</a>!"
   
