--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1,3 +1,13 @@
+- title: "Gloomy Scale (Hemiptera: Diaspididae) Ecology and Management on Landscape Trees"
+  image: 
+  description: 
+  authors: MG Just, AG Dale, SD Frank
+  link:
+    url: https://doi.org/10.1093/jipm/pmaa028
+    display:  Journal of Integrated Pest Management. 2020. 11(1), 24.
+  highlight: 1
+  news2: We discuss the paper in this <a href = "https"://doi.org/10.1093/jipm/pmaa028">Entomology Today blog post</a> by Dr. David Coyle.
+
 - title: "Can cities activate sleeper species and predict future forest pests? A case study of scale insects"
   image: sleeper.png
   description: 
