added blog posts

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,13 @@
+- date: 20 January 2021
+  headline: "We spoked Dr. David Coyle about our Journal of IPM gloomy scale paper for the <a href ="https://entomologytoday.org/2021/01/20/gloomy-scale-urban-landscape-trees-integrated-pest-management/">Entomology Today blog</a>.
 - date: 25 December 2020
   headline: "New paper on everything you wanted to know about gloomy scales. <a href='https://doi.org/10.1093/jipm/pmaa028'>See Just et al. Journal of IPM (2020)</a>!"
+  
+- date: 05 May 2020
+  headline: "<a href='<a href = "https://ecoipm.org/2020/05/05/gloomy-locks-and-the-three-cities/">Gloomy-locks and the three cities - blogpost on EcoIPM.org</a>"
+  
+- date: 16 March 2020
+  headline: "<a href='https://ecoipm.org/2020/03/16/sleepless-in-the-city-urban-heat-wakes-up-tree-pests/'>Blogpost Sleepless in the city| Urban heat wakes up tree pests</a>"
 
 - date: 25 February 2020
   headline: "New paper on sleeper species. <a href='https://www.mdpi.com/2075-4450/11/3/142'>See Frank and Just. Insects (2020)</a>!"
